# RAG-ASR

./: .gitignore  README.md  pyproject.toml  requirements.txt
checkpoints/: README.md
checkpoints/base/amphion_1.7b_merged/: args.json  config.json  generation_config.json
configs/: serve.env  serve.env.example  serve.yaml
docs/: PROJECT_STRUCTURE.md  SCRIPTS.md  SERVICE.md  TRITON_BATCH_V2_REPORT.md  TRITON_INFERENCE_TEST_REPORT.md
evaluation/: README.md  benchmark_triton_v2_batch.py  benchmark_triton_vs_local.py  benchmark_vllm_encoder_bypass.py
examples/: README.md  hotword_pool.txt  hotwords.tsv  metadata.jsonl  transcripts.tsv  triton_client_example.py  vllm_encoder_bypass.py  wav.scp
scripts/: benchmark_triton_v2_batch.py  benchmark_triton_vs_local.py  benchmark_vllm_encoder_bypass.py  build_envs.sh  build_triton_exec_env.sh  build_triton_server_env.sh  hotword_status.sh  infer.sh  merge_hw_maps.py  pull_triton_image.sh  retrieve.py  serve_http.py  serve_http.sh  start_triton.sh  test_triton_examples.py  test_vllm_encoder_bypass.py  train_retrieval.sh  triton_exec_activate.sh  triton_hotword_client.py  triton_v2_client_test.py
src/rag_asr/: __init__.py  cache.py  cli_merge_hw_maps.py  cli_retrieve.py  cli_triton_config.py  config.py  dataset.py  dual_tower.py  eval_biasing.py  hotwords.py  infer.py  model_layout.py  model_loader.py  serve.py  train.py  vllm_bypass.py
tests/: conftest.py  test_config.py  test_hotword_management.py  test_vllm_bypass.py
triton/rag_asr_retrieve/: config.pbtxt
triton/rag_asr_retrieve_v2/: config.pbtxt
(+10 files in other folders)
